<resources>
    <string name="app_name">Laboratory</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_user">New user?</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="forgot_password_msg">Please Provide your email ID. we will send you reset email on your mail</string>

    <string name="send_mail">Send Mail</string>
    <string name="name">Name oF laboratory</string>
    <string name="mobile">Contact Number Laboratory</string>
    <string name="address">Address</string>
    <string name="types">Service of Laboratory</string>
    <string name="signup">Signup</string>
    <string name="old_user">Old user</string>
    <string name="license">License</string>
    <string name="report">Report</string>
    <string name="instruction">Description</string>
    <string name="prescription_title">Title</string>
    <string name="choose_pdf">Choose PDF</string>
    <string name="upload">upload</string>
    <string name="profile">Profile</string>
</resources>
