<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".SignupActivity">


        <EditText
            android:id="@+id/activity_profile_name_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/activity_profile_email_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:enabled="false"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/activity_profile_password_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:enabled="false"
            android:hint="@string/password"
            android:inputType="numberPassword" />

        <EditText
            android:id="@+id/activity_profile_mobile_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/mobile"
            android:inputType="numberDecimal" />


        <EditText
            android:id="@+id/activity_profile_address_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/address" />

        <EditText
            android:id="@+id/activity_profile_license_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/license" />


        <EditText
            android:id="@+id/activity_profile_types_stock_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/types" />

        <Button
            android:id="@+id/activity_profile_signup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/signup"
            android:textColor="#fff" />


    </LinearLayout>

</ScrollView>